--- a/newsletter/2023-09-03.md
+++ b/newsletter/2023-09-03.md
@@ -1,4 +1,4 @@
-# Some lessons for bitcoiners from GLD
+# GLD's lessons for bitcoiners
 ## #Web3Weekly: Aug. 27 to Sept. 2, 2023
 
 **Bitcoin is always following** in gold's footsteps, it seems.
@@ -7,25 +7,25 @@ Fans of the two assets sometimes [clash](https://intelligencesquared.com/events/
 
 For the last 19 of them, gold has been readily available to trade in the U.S. in the form of shares in any of several exchange-traded funds (ETFs) that hold the yellow metal on investors' behalf.
 
-ETFs makes it much less cumbersome to own gold as an investment, since the funds effectively work like shares in a single company, changing hands in exactly the same familiar venues, such as the New York Stock Exchange. This setup has thus indisputably widened the audience for gold in America, especially among retail investors.
+ETFs make it much less cumbersome to own gold as an investment, since the funds effectively work like shares in a single company, changing hands in exactly the same traditional venues, such as the New York Stock Exchange. This setup has thus indisputably widened the audience for gold in America, especially among retail investors.
 
 Now hopes for a similar U.S.-listed ETF holding bitcoin are soaring. The catalyst: Grayscale Investments' courtroom victory [over the Securities and Exchange Commission](https://www.forbes.com/sites/digital-assets/2023/08/29/grayscale-lands-court-victory-over-sec-in-battle-for-spot-bitcoin-etf/) in federal court on Tuesday. A three-judge panel agreed with Grayscale that the SEC has not adequately explained its previous decision to block Grayscale from from offering a bitcoin ETF.
 
-As someone who [covered](https://www.wsj.com/articles/SB110194198185388535) the launch of gold ETFs for the Wall Street Journal's in the early 2000s, I do think a bitcoin fund could be transformative in some ways. In others, I think it might disappoint the "laser eyes" set, though.
+As someone who [covered](https://www.wsj.com/articles/SB110194198185388535) the launch of gold ETFs for the Wall Street Journal in the early 2000s, I do think a bitcoin fund could be transformative in some ways. In others, I think it might disappoint the ["laser eyes"](https://bitcoinmagazine.com/culture/bitcoin-laser-eyes-origins) set, though. (Full dislcosure: I do own some bitcoin myself.)
 
-A few educated guesses based on gold's ETF adventures:
+Below are a few educated guesses based on gold's ETF journey:
 
-- **There will be inflows.** Bitcoiners are probably right to anticipate that the launch of a new ETF, or [several](https://www.reuters.com/technology/grayscale-victory-big-boost-decade-long-spot-bitcoin-etf-push-2023-08-30/), will mean a lot of new buying of the BTC token itself. In late 2004, when the most popular gold ETF launched under the stock ticker [GLD](https://tinyurl.com/y2hctbsk), it skyrocketed over $1 billion in assets in its first [three days of trading](https://finance.yahoo.com/news/first-u-gold-backed-etf-204945038.html). The fund's valuation has since grown to [$56 billion](https://duckduckgo.com/?q=current+metal+holdings+GLD+trust&t=brave&ia=stock) as of Friday's close, so that's essentially the amount of gold it has to hold to back the shares in GLD. More on that in a moment.
+- **There will be inflows.** Bitcoiners are probably right to anticipate that the launch of a new ETF, or [several](https://www.reuters.com/technology/grayscale-victory-big-boost-decade-long-spot-bitcoin-etf-push-2023-08-30/), will mean a lot of new buying of the BTC token itself. In late 2004, when the most popular gold ETF launched under the stock ticker [GLD](https://tinyurl.com/y2hctbsk), it skyrocketed over $1 billion in assets in its first [three days of trading](https://finance.yahoo.com/news/first-u-gold-backed-etf-204945038.html). GLD's valuation has since grown to [$56 billion](https://duckduckgo.com/?q=current+metal+holdings+GLD+trust&t=brave&ia=stock) as of Friday's close, so that's essentially the amount of gold it has to hold to back the shares in GLD. More on that in a moment.
 
-- **We're going to need a bigger boat.** If ETF-related buying of bitcoin shapes up as it did in gold, or surpasses it, the trust backing any popular bitcoin ETF would automatically constitute a new kind of ["whale"](https://www.investopedia.com/terms/b/bitcoin-whale.asp) in the underlying BTC token market. It will be the most transparent, [market-neutral](https://www.investopedia.com/terms/m/marketneutral.asp) whale we've ever seen, which in turn would diminish slightly the power of the more [loud-mouthed](https://www.youtube.com/results?search_query=%22michael+saylor%22+interview&sp=CAI%253D), [manipulative](https://www.vox.com/recode/2021/5/18/22441831/elon-musk-bitcoin-dogecoin-crypto-prices-tesla) species of whale we're more accustomed to seeing in BTC. This would be something to celebrate indeed, in my opinion.
+- **We're going to need a bigger boat.** If ETF-related buying of bitcoin shapes up as it did in gold, or surpasses it, the trust backing any popular bitcoin ETF would automatically constitute a new kind of ["whale"](https://www.investopedia.com/terms/b/bitcoin-whale.asp) in the underlying BTC token market. The ETF will be the most transparent, [market-neutral](https://www.investopedia.com/terms/m/marketneutral.asp) whale we've ever seen, which in turn would diminish slightly the power of the more [loud-mouthed](https://www.youtube.com/results?search_query=%22michael+saylor%22+interview&sp=CAI%253D), [manipulative](https://www.vox.com/recode/2021/5/18/22441831/elon-musk-bitcoin-dogecoin-crypto-prices-tesla) species of whale we're more accustomed to seeing in BTC. This would be something to celebrate indeed, in my opinion.
 
 - **But there are limitations.** Although GLD's stock-market valuation is nothing to sneeze at in absolute terms, we should also note it's about 0.4% of gold's global valuation [as a commodity](https://companiesmarketcap.com/gold/marketcap/#:~:text=Estimated%20Market%20Cap%3A%20%2412.973%20T&text=This%20value%20was%20obtained%20by,Council%20(End%2D2021). In other words, although GLD is certainly a notable component of the broader gold market, it's by no means become the main driver over time. Assuming a similar long-term dynamic plays out in bitcoin, any cryptoheads hoping that an ETF will trigger true [hyper-bitcoinization](https://www.coindesk.com/tech/2022/11/03/hyperbitcoinization-is-a-few-years-away-predicts-samson-mow/) of the global economy will probably be disappointed.
 
-- **Is this your UI fix?** It's conceivable that an ETF could become a primary vehicle for non-geeks interested in using bitcoin as a financial store of value. An ETF would allow them to do that without the hassle of managing encryption keys and so forth. In effect, the ETF could become these users' primary user interface for the token.
+- **Is this your UI fix?** It's conceivable that an ETF could become the primary vehicle for non-geeks interested in using bitcoin as a financial store of value. An ETF would allow them to do that without the hassle of managing encryption keys and so forth. In effect, the ETF could become these users' primary user interface for the token.
 
-That said, a bitcoin ETF would do nothing to help with the user interface for *payments*. Gold also faced that problem in the early 2000s, when some startups tried to offer gold-linked cards or other products to enable daily consumer spending via gold. But none of those things ever quite caught on like GLD did as a financial vehicle.  
+That said, a bitcoin ETF would do nothing to help with the user interface for *payments*. Gold also faced that problem in the early 2000s, when some startups tried to offer gold-linked cards or other products to enable daily consumer spending via gold. But none of those things ever really caught on like GLD did as a financial vehicle.  
 
-On the bright side, we might also say payments are where the opportunities will remain (and probably grow) for bitcoin developers over time. The "store of value" use case is at least pretty close to being solved, if it isn't already.
+On the bright side, we might also say payments are where the opportunities will remain (and probably grow) for bitcoin developers over time. The "store of value" use case seems pretty close to being solved for [normie](https://www.urbandictionary.com/define.php?term=Normie) users, if it isn't already.
 
 Some other notable headlines:
 
