--- a/newsletter/2023-09-17.md
+++ b/newsletter/2023-09-17.md
@@ -3,11 +3,11 @@
 
 **Circle CEO Jeremy Allaire** mentioned a statistic on [Laura Shin's podcast](https://unchainedcrypto.com/jeremy-allaire-on-circles-multi-decade-strategy-and-where-stablecoin-regulation-is-headed/) Tuesday that grabbed my attention.
 
-Around the 19-minute mark, Allaire estimates *about 0.5% of the world's software developers are able to build web3 projects*. He views this as a big opportunity for Circle to build tools that enable web2 developers to apply their existing skills in on-chain environments.
+Around the episode's 19-minute mark, Allaire estimates *about 0.5% of the world's software developers are able to build web3 projects*. He views this as a big opportunity for Circle to build tools that enable web2 developers to apply their existing skills in on-chain environments.
 
 Frankly, I'm not necessarily sure the right entity to pull off that feat is Circle, which is chiefly known at present for issuing the [USDC stablecoin](https://coinmarketcap.com/currencies/usd-coin/). If they can, more power to them.
 
-But even if not, *someone* needs to fix that very real problem Allaire laid out so cogently. It's really the only way we can move blockchain technology from serving largely as a platform for financial speculation into real products and applications that solve problems for users.
+But even if not, *someone* needs to fix that very real developer problem Allaire laid out so cogently. It's really the only way we can move blockchain technology from serving largely as a platform for financial speculation into real products and applications that solve problems for users.
 
 The week's notable headlines:
 
@@ -19,7 +19,7 @@ The week's notable headlines:
 
 - **Telegram will begin** rolling out an in-app crypto wallet, three years after regulators initially threw cold water on the idea. ([Decrypt](https://decrypt.co/156109/telegram-gets-crypto-wallet-3-years-after-sec-pumped-brakes))
 
-- **British chipmaker Arm Holdings** launched a successful initial public offering on Nasdaq. Shares jumped 25% Tuesday to push Arm to a $65 billion valuation, in a deal that could inspire a broader comeback of tech IPOs going into 2024. ([Reuters](https://www.reuters.com/markets/deals/softbanks-arm-set-debut-nasdaq-after-blockbuster-ipo-2023-09-14/))
+- **British chipmaker Arm Holdings** launched a successful initial public offering on Nasdaq. Shares jumped 25% Tuesday to push Arm to a $65 billion valuation. The deal could inspire a broader comeback of tech IPOs going into 2024. ([Reuters](https://www.reuters.com/markets/deals/softbanks-arm-set-debut-nasdaq-after-blockbuster-ipo-2023-09-14/))
 
 - **FTX received permission** from a federal bankruptcy judge to sell up to $100 million a week out of its $3.4 billion trove of crypto tokens to help repay its creditors. ([Reuters](https://www.reuters.com/technology/ftx-gets-court-approval-sell-crypto-assets-2023-09-13/))
 
