Rewriting lead item for 17 Sept 2023

--- a/newsletter/2023-09-17.md
+++ b/newsletter/2023-09-17.md
@@ -1,13 +1,15 @@
 # Web3's stark developer shortage
 ## #Web3Weekly: Sept. 10-16, 2023
 
-**Circle CEO Jeremy Allaire** mentioned a statistic on [Laura Shin's podcast](https://unchainedcrypto.com/jeremy-allaire-on-circles-multi-decade-strategy-and-where-stablecoin-regulation-is-headed/) Tuesday that grabbed my attention.
+**Just 0.5% of the world's software developers** can build web3 projects, according to Circle CEO Jeremy Allaire.
 
-Around the episode's 19-minute mark, Allaire estimates *about 0.5% of the world's software developers are able to build web3 projects*. He views this as a big opportunity for Circle to build tools that enable web2 developers to apply their existing skills in on-chain environments.
+He dropped that little eyebrow-raising factoid on [Laura Shin's podcast](https://unchainedcrypto.com/jeremy-allaire-on-circles-multi-decade-strategy-and-where-stablecoin-regulation-is-headed/) Tuesday, around the episode's 19-minute mark. The whole thing is really worth a listen, including thoughtful discussion of a wide range of topics in the crypto space.
 
-Frankly, I'm not necessarily sure the right entity to pull off that feat is Circle, which is chiefly known at present for issuing the [USDC stablecoin](https://coinmarketcap.com/currencies/usd-coin/). If they can, more power to them.
+**Why it matters:** Allaire said he views the developer shortage as a big opportunity for Circle to build tools that enable web2 developers to apply their existing skills in on-chain environments.
 
-But even if not, *someone* needs to fix that very real developer problem Allaire laid out so cogently. It's really the only way we can move blockchain technology from serving largely as a platform for financial speculation into real products and applications that solve problems for users.
+Frankly, I'm not entirely sure the right entity to pull off that feat is Circle, which is chiefly known at present for issuing the [USDC stablecoin](https://coinmarketcap.com/currencies/usd-coin/). If they can, more power to them.
+
+But even if not, *someone* needs to fix the very real lack of developers Allaire described so well. It's really the only way we can move blockchain technology from serving largely as a platform for financial speculation into real products and applications that solve problems for users.
 
 The week's notable headlines:
 
