--- a/newsletter/2023-09-17.md
+++ b/newsletter/2023-09-17.md
@@ -11,7 +11,7 @@ Frankly, I'm not entirely sure the right entity to pull off that feat is Circle,
 
 But even if not, *someone* needs to fix the very real lack of developers Allaire described so well. It's really the only way we can move blockchain technology from serving largely as a platform for financial speculation into real products and applications that solve problems for users.
 
-The week's notable headlines:
+The week's other notable headlines:
 
 - **A federal antitrust trial against Google began in the U.S.** Prosecutors allege the company engaged in anticompetitive practices to boost its core search business. ([CNN](https://www.cnn.com/2023/09/12/tech/google-antitrust-lawsuit-government-trial-duplicate-2/index.html))
 
