Fleshing out draft for 24 Sep 2023

--- a/newsletter/2023-09-24.md
+++ b/newsletter/2023-09-24.md
@@ -1,94 +1,120 @@
-# tktk
+# Bitcoin's global use cases
 ## #Web3Weekly: Sept. 17-23, 2023
 
-<!--
+**Cointelegraph's Joe Hall just returned from Cuba,** where he attended the island's first big bitcoin meetup. (Or at least the first one that an English-language journalist with a video camera was present for.)
 
-Lead item possibilities...
+[Hall's report](https://www.youtube.com/watch?v=UPp0Xbk4bFo) from the trip is eye-opening stuff indeed. In particular, I highly recommend it to anyone from a rich country who has a strong opinion on bitcoin, pro or con.
 
-- GLOBAL: In the rich world, perspective might be skewed on cryptocurrency.
+Some context: Cuba is undergoing a serious economic crisis right now, including a sharp currency devaluation. Reuters reported last month that inflation is running at [45% a year](https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/), with the Cuban peso recently trading at 230 pesos to one U.S. dollar.
 
-- BUKELE: Is this guy a dictator or not? Like, really.
+Anecdotally, Hall's sources in Cuba estimated on-camera that the peso's purchasing power is now just one-eighth what it was against the U.S. dollar two years ago.
 
-- WHOSZOOMINWHO: Does the token economy need America more than vice versa?
+In that sort of currency collapse, which has no real parallel in U.S. history, people might look for an alternative form of money to trust. And maybe it's bitcoin.
 
-- STABLECOINS: Stablecoin riff. Why these fascinate me.
-
-- CANNABIS: Cannabis and Crypto intersection in the U.S.
-
-- AKONCITY: WTF happened?
-
-- LSTAKING: Liquid staking is dumb. Here's why.
-
-Keep it to ~650 words!
-
--->
+We've recently seen similar situations in Argentina and Venezuela. El Salvador, Nigeria, and Montserrat.
 
 
-**Novelist James Baldwin** gave my all-time favorite quote about the craft of writing. It comes from a 1984 interview with the [Paris Review](https://www.theparisreview.org/interviews/2994/the-art-of-fiction-no-78-james-baldwin):
 
-*"When you’re writing, you’re trying to find out something which you don’t know. The whole language of writing for me is finding out what you don’t want to know, what you don’t want to find out. But something forces you to anyway."*
 
-In its own way, this humble newsletter has always proceeded in that vein. When I was working my first marketing gig at a crypto startup in San Francisco [two crypto winters](https://www.urbandictionary.com/define.php?term=crypto%20winter) ago, I went down the proverbial "rabbit hole" to rapidly pick up what I needed to know about blockchain, cryptocurrencies, and decentralization in general.
+This sort of situation is inconceivable in a country like the U.S., where the currency is widely accepted and most people trust conventional, regulated banks.  
 
-It was fascinating, heady stuff. I also quickly realized the vast majority of *everyone else* were also beginners at this subject matter. So I started documenting my own journey here, sharing the information I was consuming in hope it might be useful to others as well.
 
-Along the way, I've also learned a few things I didn't really want to know, as Baldwin would say. Things that were unpleasant, that I initially had some resistance to but have come to accept.
 
-One such thing I've (mostly) made peace with is the lop-sided concentration of the token market's valuation, which I now believe is [here to stay](https://mailchi.mp/3627b3887115/web3-weekly-20312576). As long as the handful of dominant protocols are open source and transparent, with decentralized control, I think we should be OK in the long run. That scenario would represent a big improvement over the current version of the web, which is basically defined by all sorts of proprietary limitations and choke points created by Big Tech.  
 
-I see the token market as a four-part affair, really. When I consume news day-to-day about crypto at this point, this is essentially the hierarchy I run through in my head to prioritize how important any breaking story is.
 
-I'll include here the market share that each of the four parts has within the token ecosystem's global valuation of $1 trillion, according to [CoinMarketCap](https://coinmarketcap.com/) data:
+As an American, I feel like much of bitcoin skepticism I hear at home is rooted in a lack of empathy for societies that don't necessarily resemble our own. We live in a country where our currency is widely accepted, our banks are regulated, and public courts enforce contracts pretty strictly.
 
-### Bitcoin (48%)
+It's easy for people  
 
-The oldest and most widely held token by far. Designed to be the ultimate form of digital money, though some developers have put it to [funkier uses](https://decrypt.co/resources/what-are-ordinals-a-beginners-guide-to-bitcoin-nfts) lately. You all know this one. Let's move on...
 
-### Ethereum (19%)
 
-Designed to work as a platform for decentralized apps (dApps). Yes, there are several networks that aspire to compete with it now. But keep in mind, *all of them combined* still aren't as big as Ethereum.
 
-Honestly, I've begun wondering whether the widespread developer adoption of ETH has reached the point of a network effect that constitutes an insurmountable advantage to any other dApp platform ever gaining majority market share. In other words, people use it -- and will almost inevitably continue to use it, regardless of some technical shortcomings -- for no other reason beyond the fact that other people use it. But who knows. Time will tell.
 
-### Unicorn Stablecoins (11%)
 
-Here we get into our first multi-coin category. I lump into it all the stablecoins pegged to the U.S. dollar with over $1 billion in market capitalization, using that as a rough measure of real traction among users.
 
-This "unicorn" club comprises [Tether](https://coinmarketcap.com/currencies/tether/) ($83 billion valuation), [USDC](https://coinmarketcap.com/currencies/usd-coin/) ($26 billion), [DAI](https://coinmarketcap.com/currencies/multi-collateral-dai/) ($5 billion), and [TruUSD](https://coinmarketcap.com/currencies/trueusd/) ($3 billion).
 
-As partisans of one stablecoin or another will surely point out, there's a separate conversation to be had about the different ways each token implements its peg to the U.S. dollar and reports its reserves to the public. Let it suffice for now that when we start talking stablecoins, we immediately confront scenarios with more centralization and less transparency than the Bitcoin/Ethereum duopoly at the top of the crypto market.
+###1. The BTC token is money conjured out of thin air, with no intrinsic value.
 
-Nevertheless, I believe it generally makes sense for users and journalists to think of the big stablecoins as a group because they all are intended to play essentially the same economic role in the marketplace, acting as bridges between conventional finance and the on-chain world.
+Reuters report: https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/
 
-### Everything Else (22%)
+###2. Using the Bitcoin network is risky compared to the protections of conventional banks.
 
-I won't use the common term "altcoin" here, because industry folks have traditionally used it to mean "everything that's not bitcoin." That usage worked well enough in the very early days of cryptocurrencies, but my hunch is it's a little antiquated at this point, especially in regard to Ethereum.
+tktk
 
-That token should now be regarded as a basic feature of the crypto firmament, in my opinion, so it's not really so "alt" anymore. It's not going anywhere, almost as certainly as bitcoin isn't.
+###3. You can't really spend or use BTC for anything.
 
-That said, there's still plenty of "everything else" to go around even without Ethereum. CoinMarketCap now tracks over 8,000 tokens.
+*Everyone isn't like you, and the circumstances where they live might be wildly different from the ones you take for granted in your country.*
 
+
+
+
+In 2 years, the Cuban peso is worth 1/8 what it was against the USD, according to the video.
+
+blocked from using VPNs,
 
 
 The week's notable headlines:
 
-- Fed decision Wednesday ((Get link after the fact...))
+- Binance issues! Some stories as of Thursday: https://decrypt.co/197850/binance-sec-us-ceffu-merit-peak | https://www.coindesk.com/policy/2023/09/18/binance-is-supposedly-separate-from-crypto-custodian-ceffu-the-sec-has-questions/ | https://www.coindesk.com/policy/2023/09/19/some-binance-eu-users-find-fiat-withdrawals-cut-off-even-before-paysafe-ends-service/ | https://www.coindesk.com/markets/2023/09/19/binances-bitcoin-trading-volume-plunges-57-as-regulatory-pressure-mounts/ ((Check again Friday, in case anything else is breaking...))
 
-- New ETH testnet had issues at launch. ((Need link))
+- https://www.theblock.co/post/252675/opensea-tells-users-to-rotate-api-keys-after-third-party-security-breach
 
-- Binance issues! ((Check for updates late in week))
+- JPMorgan says last Ethereum upgrade was "disappointing" https://www.coindesk.com/markets/2023/09/22/ethereums-shanghai-upgrade-has-failed-to-boost-network-activity-jpmorgan-says/ | ETH has turned inflationary. https://www.coindesk.com/markets/2023/09/22/ether-turns-inflationary-as-network-revenue-plunges-to-9-month-low/ | New ETH testnet had issues at launch. ((Need link)) | https://www.coindesk.com/markets/2023/09/22/ether-turns-inflationary-as-network-revenue-plunges-to-9-month-low/
 
-- TK
 
-- Headspace referral offer... <!-- https://www.headspace.com/referral/z6jb3?slug=657c2c&audio=false -->
+- SBF's parents are getting implicated in the FTX case. ((Need link))
+
+
+- A 27M loss on a DAO shows everything wrong with DAOs. https://www.coindesk.com/business/2023/09/21/nouns-daos-27m-revolt-reveals-toxic-mix-of-money-hungry-traders-and-blockchain-idealists/
+
+- New report says 90-plus percent of NFTs are worthless... https://dappgambl.com/nfts/dead-nfts/ | https://www.theguardian.com/technology/2023/sep/22/nfts-worthless-price#:~:text=NFTs%2C%20or%20non%2Dfungible%20tokens,A%20Clary%2FAFP%2FGetty%20Images
+
+- Swisher speculating that Musk might buy Fox News. ((Need link))
+
+- HBR on leading change ((Need link))
+
+- Cointelegraph's Joe Hall looked into bitcoin adoption in Cuba https://www.youtube.com/watch?v=UPp0Xbk4bFo
+
+- Big IMX rally... https://decrypt.co/198152/immutablex-up-25-after-south-korean-traders-drive-imx-price-surge
+
+- Flack message ((What was that thing she wanted in, again?))
+
+- George RR martin suing OpenAI https://decrypt.co/198076/game-of-thrones-george-rr-martin-ai-openai
+
+- Mt. Gox's trustee extended creditor repayments for a year https://decrypt.co/198147/mt-gox-trustee-extends-deadline-for-creditor-repayments-by-a-year |
+
+- https://www.coindesk.com/business/2023/09/21/top-3-crypto-myths-tackled-for-advisors/
+
+- NEAR Foundation's CEO stepped down. https://www.coindesk.com/business/2023/09/21/near-foundations-marieke-flament-steps-down-as-ceo/
+
+- https://decrypt.co/198425/police-seize-bitcoin-mining-machines-prison-bust-venezuela
+
+- https://cointelegraph.com/news/base-surges-past-solana-total-value-locked
+
+- https://fortune.com/crypto/2023/09/22/coinbase-ftx-europe-derivatives-futures-binance-crypto/
+
+- https://cointelegraph.com/news/architect-fintech-receives-nfa-approval-operate-introducing-broker
+
+- https://cointelegraph.com/news/bitcoin-miners-focus-on-efficiency-renewable-energy-at-world-digital-mining-summit
+
+- **Stablecoin issuer Tether** made a strategic investment in Northern Data Group, a German artificial-intelligence company. ([The Block](https://www.theblock.co/post/252360/tether-makes-strategic-investment-in-northern-data-group))
+
+
 
 - https://www.cnn.com/style/article/x-wing-model-star-wars-auction-intl-scli/index.html
 
 - https://www.space.com/archaeologists-fuming-over-ancient-human-relative-remains-sent-to-space
 
-- SBF's dad wanted a raised, cc'd Mom on the exchange with Sam. LOL.
+- SBF's dad wanted a raised, cc'd Mom on the exchange with Sam. LOL. https://www.coindesk.com/policy/2023/09/19/sam-bankman-frieds-dad-thought-his-son-wasnt-paying-him-enough-so-he-got-mom-involved/ | https://www.coindesk.com/policy/2023/09/20/stanford-university-will-return-gifts-donated-by-ftx-report/
 
 - **Comedian Larry David** went off on Elon Musk [at a wedding reception](). Distressingly, no smartphone video of the incident has emerged. Yet.
 
+<!-- Boilerplate needs re-working. This is version from last week... -->
 
-<!-- Pickup boilerplate from last week... -->
+_**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
+
+_**Note: #Web3Weekly content is intended for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
+
+_**Best wishes for a healthy and productive week ahead.**_  
+
+_**-- Peter A. McKay**_  
